# convert_market_data

./: CMakeLists.txt  README.md  main.cpp
src/: converter.h  market_data_converter.cpp  market_data_converter.h  oanda_to_zorro_converter.cpp  oanda_to_zorro_converter.h  types.h  util.h  yahoo_to_zorro_converter.cpp  yahoo_to_zorro_converter.h
